# slime-simulation-rg

./: Cargo.toml  bld-deploy-remote.py  flake.nix  rust-toolchain.toml
.cargo/: config.toml
builder/: Cargo.toml
builder/src/: main.rs
cpu-runner/: Cargo.toml
cpu-runner/src/: main.rs
first-rg-program/: Cargo.toml  build.rs
first-rg-program/src/: compute.rs  graphics.rs  lib.rs  main.rs
first-rg-shader/: Cargo.toml
first-rg-shader/src/: lib.rs  shared.rs
program-cpu/: Cargo.toml
program-wgpu-hot-reload/: Cargo.toml  build.rs
program-wgpu-hot-reload/src/: compute.rs  lib.rs  main.rs
program-wgpu-simple/: Cargo.toml  build.rs  index.html
program-wgpu-simple/src/: compute.rs  configuration.rs  configuration_menu.rs  egui_app.rs  egui_tools.rs  graphics.rs  lib.rs  main.rs  main_egui.rs  program.rs  shared.rs  slot_agents.rs  slot_diffuse.rs  slot_egui.rs  slot_mouse.rs  slot_render.rs  slots.rs  window.rs
shader-compute/: Cargo.toml
shader-compute/src/: lib.rs
shader-sky/: Cargo.toml
shader-sky/src/: lib.rs
shader-slime/: Cargo.toml
shader-slime/src/: lerp_test.rs  lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  pixel_view.rs
