cargo-features = ["edition2024"]
[package]
name = "cpu-runner"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true

[dependencies]
minifb = "0.25.0"
# bring in the shader as natively compiled code
shared = { path = "../shared" }
first-rg-shader = { path = "../first-rg-shader" }

# for parallelism, not really needed though
rayon = "1.5"
