cargo-features = ["edition2024"]

[package]
name = "first-rg-program"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "23", features = ["spirv", "vulkan-portability"]}
winit = { version = "0.30.0", features = ["android-native-activity", "rwh_05"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
env_logger = "0.11.0"

cfg-if = "1.0.0"
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", rev = "6e2c84d4fe64e32df4c060c5a7f3e35a32e45421", features = ["watch"] }
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", rev = "6e2c84d4fe64e32df4c060c5a7f3e35a32e45421" }
strum = { version = "0.26.0", default-features = false, features = ["std", "derive"] }

#[build-dependencies]
#spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", rev = "6e2c84d4fe64e32df4c060c5a7f3e35a32e45421" }

[features]
hot-reload = []

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3