cargo-features = ["edition2024"]
[package]
name = "program-cpu"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true

[dependencies]
minifb = "0.25.0"
# bring in the shader as natively compiled code
shared = { path = "../shared" }
shader-sky = { path = "../shader-sky" }

# for parallelism, not really needed though
rayon = "1.5"
