cargo-features = ["edition2024"]

[package]
name = "program-wgpu-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "22.1", features = ["spirv", "vulkan-portability"]}
winit = { version = "0.30.0", features = ["android-native-activity", "rwh_05"] }
bytemuck = { workspace = true, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
shared = { path = "../shared" }
rand = "0.9.0"

egui = "0.29.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.29.1",features = ["winit"] }
egui-winit = "0.29.1"
pollster = "0.3.0"
glam = {version = "0.29.2", features = ["bytemuck"]}
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
# rfd = { version= "0.15.2" , default-features = false, features = ["xdg-portal", "async-std"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[build-dependencies]
#spirv-builder = { workspace = true }
