cargo-features = ["edition2024"]

[package]
name = "program-wgpu-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "24.0.3", features = ["spirv", "vulkan-portability", "webgl", "wgsl"]}
winit = { version = "0.30.9", features = ["android-native-activity", "rwh_05"] }
bytemuck = { workspace = true, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
shared = { path = "../shared" }
rand = "0.9.0"

egui = "0.31.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
pollster = "0.4.0"
glam = {version = "0.30.1", features = ["bytemuck"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rfd = { optional = true, version = "0.15.3", default-features=false, features=["gtk3", "async-std"] }

[features]
default = ["save-preset"]
save-preset = ["rfd"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[build-dependencies]
#spirv-builder = { workspace = true }
