cargo-features = ["edition2024"]
[package]
name = "shared"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
spirv-std = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }
cfg-if = "1.0.0"

[target.'cfg(not(any(target_arch = "spirv")))'.dependencies]
serde = { version = "1.0.218", features = ["derive"] }
